--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -8,27 +8,26 @@ body {
     height: 100%;
     width: 100%;
 }
+
 input[type=text] {
     cursor: pointer;
 }
+
 /* ============================== START OF HEADERS ============================== */
-.appHeader {
-    border: 2px solid #8b6132;
-    background-color: rgb(235, 235, 235);
-    width: 100% !important;
-}
 
 .table-logo-header {
     width: 100%;
+    
 }
 
 .headerIcon {
     padding-bottom: 10px !important;
 }
 
-.appHeaderText {
+/* .appHeaderText {
     width: 60%;
-}
+} */
+
 .appHeaderText p {
     margin-top: 15px;
     font-weight: 600;
@@ -49,9 +48,36 @@ input[type=text] {
 .appHeaderLogo img {
     width: 60px;
 }
-.header-welcome-text{
+
+.header-welcome-text {
     padding-top: 15px;
     font-weight: 600;
+}
+.header-nav{
+    width: 100%;
+}
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
 
 /* ============================== END OF HEADERS ============================== */
@@ -105,9 +131,10 @@ a {
 
 
 /* ==== START OF APP CONTENT ==== */
-.main-content-right-div{
+.main-content-right-div {
     height: 100%;
 }
+
 .appHomePage {
     width: 100%;
 }
@@ -119,32 +146,35 @@ a {
 
 .main-content-left {
     width: 40%;
-    padding: 50px 0 50px 50px; 
+    padding: 50px 0 50px 50px;
 }
 
-.main-content-left img{
+.main-content-left img {
     width: 90%;
     height: 100%;
     border: 2px solid #8b6132;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;}
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
 
 .main-content-right {
     width: 60%;
-    padding: 50px 50px 50px 0; 
+    padding: 50px 50px 50px 0;
 }
-.main-content-right img{
+
+.main-content-right img {
     width: 500px;
     height: 200px;
     border: 2px solid #8b6132;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 40px 4px;
 }
 
-.main-content-right-image-wrapper{
+.main-content-right-image-wrapper {
     text-align: center;
     margin-bottom: 45px;
-    
+
 }
-.home-signup-btn{
+
+.home-signup-btn {
     margin: auto;
     width: 250px;
     border: 2px solid black;
@@ -255,10 +285,12 @@ a {
     height: 80%;
 
 }
-.text-changepassword{
+
+.text-changepassword {
     margin: 5px;
 }
-.text-changepassword-error{
+
+.text-changepassword-error {
     color: red;
     font-size: 12px;
 }
@@ -340,6 +372,7 @@ a {
     height: 40px;
     cursor: pointer;
 }
+
 .loginBtn:disabled {
     background-color: #777a7e;
     color: white;
@@ -350,63 +383,75 @@ a {
     width: 80px;
     margin: auto;
 }
-.forgot-password-link{
+
+.forgot-password-link {
     color: blue;
     cursor: pointer;
 }
-.captcha{
+
+.captcha {
     background-color: #ccccdf;
     width: 300px;
     height: 120px;
     font-family: '&apos;Roboto&apos;, sans-serif';
 }
-.captcha table{
+
+.captcha table {
     width: 100%;
 }
-.captcha-reload img{
+
+.captcha-reload img {
     width: 25px;
     height: 25px;
     margin-top: 35%;
     border: none;
     cursor: pointer;
 }
-.captcha-reload:hover div{
+
+.captcha-reload:hover div {
     background-color: aliceblue;
 }
-.captcha-reload{
+
+.captcha-reload {
     width: 20%;
     padding-right: 10px;
 }
-.captcha-reload div{
+
+.captcha-reload div {
     margin-top: 5px;
     height: 60px !important;
     background-color: white;
     border-radius: 8px;
 }
-.captcha-code{
+
+.captcha-code {
     padding: 10px 10px 5px 10px;
     height: 70px;
     width: 80%;
     font-size: 40px;
-    font-style: italic; 
+    font-style: italic;
 }
-.captcha-code div{
+
+.captcha-code div {
     margin: auto;
     height: 60px !important;
     background-color: white;
     border-radius: 8px;
 }
-.captcha-field-td{
+
+.captcha-field-td {
     width: 100%;
     padding: 5px;
 }
-.captcha-textbox{
+
+.captcha-textbox {
     width: 95%;
     font-family: 'Courier New', monospace;
     border-radius: 4px;
     border: none;
     padding: 5px;
 }
+
 /* END OF LOGIN PAGE */
 
 /* USER PROFILE */
@@ -639,7 +684,8 @@ a {
     margin: 0 5px 0 5px;
     width: 150px;
 }
-.update-profile-validation{
+
+.update-profile-validation {
     color: red;
 }
 
@@ -677,40 +723,76 @@ a {
 /* END OF USER PROFILE */
 
 /* START OF E-BOOKS PAGE */
-.e-books-page{
+.e-books-page {
     padding: 20px;
     height: 750px;
 }
-.search-ebook-wrapper{
+
+.search-ebook-wrapper {
     text-align: center;
 }
+
 .search-ebook-wrapper input[type="text"] {
     width: 300px;
     margin: 5px;
     cursor: text;
 }
-.ebooks-wrapper{
+
+.ebooks-wrapper {
     margin-top: 25px;
 }
-.ebooks-table{
+
+.ebooks-table {
     margin-top: 20px;
     height: 100%;
-    width: 100%;
-    margin: auto;
+    /* width: 100%; */
+    /* margin: auto; */
 }
 
-.individual-ebook-wrapper{
+.ebook-td {
+    padding: 30px;
+}
+
+.individual-ebook-wrapper {
     margin: auto;
     width: 250px;
     border: 2px solid black;
-    height: 100%;
+    height: 400px;
     text-align: center;
 }
-.individual-ebook-wrapper img {
+
+.ebook-cover-image {
+    border: 2px solid black;
     margin-top: 15px;
     width: 200px;
     height: 200px;
+}
+.td-searched-cover{
+    margin: auto;
+    text-align: center;
+}
+
+.ebook-pagination-wrapper {
+    width: 100%;
+}
+.searched-title{
+    padding: 25px;
+    font-size: larger;
+}
+.search-btn{
+    color: blue;
     cursor: pointer;
+}
+.search-ebook-modal {
+    width: 800px;
+    max-width: 800px;
+    height: 780px;
+    overflow: auto;
+    border-radius: 20px;
+}
+
+.manage-book-request-table {
+    width: 100%;
 }
 /* END OF E-BOOKS PAGE */
 .request-borrow-book-modal {
@@ -794,10 +876,12 @@ a {
     width: 215px;
     height: 130px;
 }
-.stats-numbers{
+
+.stats-numbers {
     font-size: 122 !important;
 }
-.stats-label{
+
+.stats-label {
     font-size: 16px;
 }
 
@@ -813,6 +897,7 @@ a {
     width: 30px;
     cursor: pointer;
 }
+
 .admin-dashboard-btn4 {
     background-color: transparent;
     border: none;
@@ -820,6 +905,7 @@ a {
     font-size: 17px;
     cursor: pointer;
 }
+
 .admin-dashboard-btn4:disabled {
     background-color: transparent;
     border: none;
@@ -827,6 +913,7 @@ a {
     font-size: 17px;
     cursor: pointer;
 }
+
 .admin-dashboard-btn4:hover {
     background-color: transparent;
     border: none;
@@ -834,13 +921,16 @@ a {
     font-size: 17px;
     cursor: pointer;
 }
+
 .book-edit-long-tb[type=text] {
     width: 600px;
     max-width: 600px;
 }
+
 .admin-dashboard-btn2 {
     width: 200px;
 }
+
 .admin-dashboard-btn {
     width: 200px;
     height: 60px;
@@ -850,7 +940,7 @@ a {
     font-weight: 700;
     color: #313133;
     background-color: #2e8adc;
-    background: linear-gradient(90deg, #2e8adc 0%, #2e8adc 100%); 
+    background: linear-gradient(90deg, #2e8adc 0%, #2e8adc 100%);
     color: white;
     border: none;
     border-radius: 1000px;
@@ -975,8 +1065,9 @@ button:focus::after {
 .adminDashboard-modalHeader-search input {
     width: 250px;
 }
-.resetpassword{
-    /* padding: 5px; */
+
+.resetpassword {
     margin: 5px;
 }
+
 /* ==== END OF APP CONTENT ==== */
